--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<p>Input your Subject Marks</p>
 		<div class="row justify-content-center">
 			<div class="col-5">
-				<input  id="input" type="text" placeholder="your marks" class="form-control" maxlength="3">
+				<input  id="input" type="text" placeholder="Enter your marks" class="form-control" maxlength="3">
 				<p class="out" id="output"></p>
 				<button type="button" onclick="words()"  class="btn btn-custom">What's My Grade?</button>
 			</div>
